// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CTag renders base tag properly 1`] = `
<DocumentFragment>
  <span
    aria-label="tag"
    class="chakra-tag css-19839su"
  >
    Sample tag
  </span>
</DocumentFragment>
`;

exports[`CTag renders base tag with c-label properly 1`] = `
<DocumentFragment>
  <span
    aria-label="tag"
    class="chakra-tag css-19839su"
  >
    <span
      class="css-1vp3zs1"
    >
      Sample tag
    </span>
  </span>
</DocumentFragment>
`;

exports[`CTag renders tag with left icon properly 1`] = `
<DocumentFragment>
  <span
    aria-label="tag"
    class="chakra-tag css-19839su"
  >
    <svg
      class="chakra-icon css-1iuf2uu"
      focusable="false"
      viewBox="0 0 24 24"
    >
      
    
      <g
        stroke="currentColor"
        strokewidth="1.5"
      >
        
      
        <path
          d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
          fill="none"
          strokelinecap="round"
        />
        
      
        <path
          d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
          fill="currentColor"
          strokelinecap="round"
        />
        
      
        <circle
          cx="12"
          cy="12"
          fill="none"
          r="11.25"
          strokemiterlimit="10"
        />
        
    
      </g>
      
  
    </svg>
    <span
      class="css-1vp3zs1"
    >
      Sample tag
    </span>
  </span>
</DocumentFragment>
`;

exports[`CTag renders with close button properly 1`] = `
<DocumentFragment>
  <span
    aria-label="tag"
    class="chakra-tag css-19839su"
  >
    <span
      class="css-1vp3zs1"
    >
      Sample tag
    </span>
    <button
      aria-label="close"
      class="css-5tukl8"
      type="button"
    >
      <svg
        class="chakra-icon css-13otjrl"
        focusable="false"
        viewBox="0 0 24 24"
      >
        
    
        <g
          stroke="currentColor"
          strokewidth="1.5"
        >
          
      
          <path
            d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
            fill="none"
            strokelinecap="round"
          />
          
      
          <path
            d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
            fill="currentColor"
            strokelinecap="round"
          />
          
      
          <circle
            cx="12"
            cy="12"
            fill="none"
            r="11.25"
            strokemiterlimit="10"
          />
          
    
        </g>
        
  
      </svg>
    </button>
  </span>
</DocumentFragment>
`;

exports[`CTag renders with disabled button properly 1`] = `
<DocumentFragment>
  <span
    aria-label="tag"
    class="chakra-tag css-19839su"
  >
    <span
      class="css-1vp3zs1"
    >
      Sample tag
    </span>
    <button
      aria-label="close"
      class="css-5tukl8"
      disabled=""
      type="button"
    >
      <svg
        class="chakra-icon css-13otjrl"
        focusable="false"
        viewBox="0 0 24 24"
      >
        
    
        <g
          stroke="currentColor"
          strokewidth="1.5"
        >
          
      
          <path
            d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
            fill="none"
            strokelinecap="round"
          />
          
      
          <path
            d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
            fill="currentColor"
            strokelinecap="round"
          />
          
      
          <circle
            cx="12"
            cy="12"
            fill="none"
            r="11.25"
            strokemiterlimit="10"
          />
          
    
        </g>
        
  
      </svg>
    </button>
  </span>
</DocumentFragment>
`;

exports[`CTag renders with left icon and close button 1`] = `
<DocumentFragment>
  <span
    aria-label="tag"
    class="chakra-tag css-19839su"
  >
    <svg
      class="chakra-icon css-1iuf2uu"
      focusable="false"
      viewBox="0 0 24 24"
    >
      
    
      <g
        stroke="currentColor"
        strokewidth="1.5"
      >
        
      
        <path
          d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
          fill="none"
          strokelinecap="round"
        />
        
      
        <path
          d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
          fill="currentColor"
          strokelinecap="round"
        />
        
      
        <circle
          cx="12"
          cy="12"
          fill="none"
          r="11.25"
          strokemiterlimit="10"
        />
        
    
      </g>
      
  
    </svg>
    <span
      class="css-1vp3zs1"
    >
      Sample tag
    </span>
    <button
      aria-label="close"
      class="css-5tukl8"
      type="button"
    >
      <svg
        class="chakra-icon css-13otjrl"
        focusable="false"
        viewBox="0 0 24 24"
      >
        
    
        <g
          stroke="currentColor"
          strokewidth="1.5"
        >
          
      
          <path
            d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
            fill="none"
            strokelinecap="round"
          />
          
      
          <path
            d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
            fill="currentColor"
            strokelinecap="round"
          />
          
      
          <circle
            cx="12"
            cy="12"
            fill="none"
            r="11.25"
            strokemiterlimit="10"
          />
          
    
        </g>
        
  
      </svg>
    </button>
  </span>
</DocumentFragment>
`;

exports[`CTag renders with right icon properly 1`] = `
<DocumentFragment>
  <span
    aria-label="tag"
    class="chakra-tag css-19839su"
  >
    <span
      class="css-1vp3zs1"
    >
      Sample tag
    </span>
    <svg
      class="chakra-icon css-1odll4e"
      focusable="false"
      viewBox="0 0 24 24"
    >
      
    
      <g
        stroke="currentColor"
        strokewidth="1.5"
      >
        
      
        <path
          d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
          fill="none"
          strokelinecap="round"
        />
        
      
        <path
          d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
          fill="currentColor"
          strokelinecap="round"
        />
        
      
        <circle
          cx="12"
          cy="12"
          fill="none"
          r="11.25"
          strokemiterlimit="10"
        />
        
    
      </g>
      
  
    </svg>
  </span>
</DocumentFragment>
`;
